Fix header's menu styling on mobile

--- a/app/components/Header/Header.scss
+++ b/app/components/Header/Header.scss
@@ -116,9 +116,10 @@
   .navbar {
     .links-wrapper {
       position: fixed;
-      right: -100%;
+      right: -120%;
       top: 0rem;
       height: 100vh;
+      width: 100vw;
       flex-direction: column;
       background-color: var(--dark-blue);
       text-align: center;
